@@ -6,6 +6,7 @@ sub new {
     $self->{docroot}  = delete $opts{docroot};
     $self->{listen}   = delete $opts{listen};
     $self->{maxconns} = delete $opts{maxconns};
+    $self->{bin}      = delete $opts{bin};
     die "unknown opts" if %opts;
     return $self;
 }
@@ -23,5 +24,12 @@ sub post_daemonize {
     my $self = shift;
 }
 
+sub listen_port {
+    my $self = shift;
+    my $port = $self->{listen};
+    $port =~ s/^.+://;
+    die "not numeric port?" unless $port =~ /^\d+$/;
+    return $port;
+}
 
 1;
