@@ -1,3 +1,5 @@
+        * lighttpd support
+
         * abstract out the HTTP server support in mogstored, so
           mogstored isn't just a perlbal wrapper, but an anything
           wrapper. (in particular, lighttpd and apache)  mogstored still
